--- a/Aier360/Controllers/发现/Discovery.storyboard
+++ b/Aier360/Controllers/发现/Discovery.storyboard
@@ -36,7 +36,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="hCS-4M-auh">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="52" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="hCS-4M-auh">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -46,31 +46,33 @@
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8QI-y8-wQo" id="uDX-oB-9Rg">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="班级动态" translatesAutoresizingMaskIntoConstraints="NO" id="TLB-F0-oPD">
-                                                    <rect key="frame" x="15" y="8" width="30" height="30"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dynamic_ic_parent" translatesAutoresizingMaskIntoConstraints="NO" id="TLB-F0-oPD">
+                                                    <rect key="frame" x="15" y="11" width="30" height="30"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="30" id="ocR-rp-pK0"/>
+                                                        <constraint firstAttribute="height" constant="30" id="ehQ-Lc-6fd"/>
+                                                        <constraint firstAttribute="width" constant="30" id="fjV-ht-oan"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="好友动态" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g2d-kJ-eTI">
-                                                    <rect key="frame" x="53" y="13" width="506" height="21"/>
+                                                    <rect key="frame" x="53" y="16" width="506" height="21"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="21" id="1eZ-h4-BCt"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <color key="textColor" red="0.37254901960784315" green="0.37254901960784315" blue="0.37254901960784315" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <color key="backgroundColor" red="1" green="0.98823529409999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
                                             <constraints>
-                                                <constraint firstAttribute="bottomMargin" secondItem="TLB-F0-oPD" secondAttribute="bottom" constant="-3" id="5WA-bk-SuD"/>
-                                                <constraint firstItem="g2d-kJ-eTI" firstAttribute="leading" secondItem="TLB-F0-oPD" secondAttribute="trailing" constant="8" id="UA6-vZ-Y4w"/>
+                                                <constraint firstItem="TLB-F0-oPD" firstAttribute="leading" secondItem="uDX-oB-9Rg" secondAttribute="leading" constant="15" id="OdD-Os-Nm2"/>
                                                 <constraint firstItem="g2d-kJ-eTI" firstAttribute="trailing" secondItem="uDX-oB-9Rg" secondAttribute="trailingMargin" id="ey1-8K-aUc"/>
-                                                <constraint firstItem="TLB-F0-oPD" firstAttribute="top" secondItem="uDX-oB-9Rg" secondAttribute="topMargin" id="hOo-Oq-gzu"/>
-                                                <constraint firstItem="g2d-kJ-eTI" firstAttribute="top" secondItem="uDX-oB-9Rg" secondAttribute="topMargin" constant="5" id="nRT-FO-VR4"/>
-                                                <constraint firstItem="TLB-F0-oPD" firstAttribute="leading" secondItem="uDX-oB-9Rg" secondAttribute="leadingMargin" constant="7" id="sMZ-Au-0vG"/>
+                                                <constraint firstItem="TLB-F0-oPD" firstAttribute="top" secondItem="uDX-oB-9Rg" secondAttribute="top" constant="11" id="fba-PJ-crd"/>
+                                                <constraint firstItem="g2d-kJ-eTI" firstAttribute="leading" secondItem="TLB-F0-oPD" secondAttribute="trailing" constant="8" id="itL-fQ-c2E"/>
+                                                <constraint firstItem="g2d-kJ-eTI" firstAttribute="top" secondItem="uDX-oB-9Rg" secondAttribute="topMargin" constant="8" id="nRT-FO-VR4"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" red="1" green="0.98823529409999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
                                         <inset key="separatorInset" minX="45" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         <connections>
                                             <outlet property="logoImage" destination="TLB-F0-oPD" id="GSP-8K-0Mw"/>
@@ -388,8 +390,8 @@
         <image name="dynamic_bt_more_gray" width="18" height="4"/>
         <image name="dynamic_ic_fav" width="16" height="14"/>
         <image name="dynamic_ic_faved" width="16" height="14"/>
+        <image name="dynamic_ic_parent" width="26" height="26"/>
         <image name="mine_sexage_female" width="27" height="13"/>
         <image name="商业:服务业:个体经营" width="13" height="13"/>
-        <image name="班级动态" width="29" height="29"/>
     </resources>
 </document>
