--- a/Aier360/Controllers/校园/校园动态/SchoolInfo.storyboard
+++ b/Aier360/Controllers/校园/校园动态/SchoolInfo.storyboard
@@ -606,6 +606,9 @@
                                                     <color key="titleColor" red="0.015686274509803921" green="0.75294117647058822" blue="0.5607843137254902" alpha="1" colorSpace="calibratedRGB"/>
                                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                 </state>
+                                                <connections>
+                                                    <action selector="phoneAction:" destination="ILO-Rn-4l3" eventType="touchUpInside" id="QfR-zb-Wdg"/>
+                                                </connections>
                                             </button>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="summary_ic_phone" translatesAutoresizingMaskIntoConstraints="NO" id="fFr-TV-2ut">
                                                 <rect key="frame" x="15" y="157" width="12" height="12"/>
@@ -1114,6 +1117,126 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="omK-9z-j9s" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="5135" y="1037"/>
+        </scene>
+        <!--Edit Summary View Controller-->
+        <scene sceneID="czH-hB-YhQ">
+            <objects>
+                <viewController storyboardIdentifier="ZXEditSummaryViewController" id="RYg-UJ-oQ6" customClass="ZXEditSummaryViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="G0B-V5-IC4"/>
+                        <viewControllerLayoutGuide type="bottom" id="q7T-L8-oJZ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="xJF-gs-NCi">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="45" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="vMu-Dd-VUI">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <inset key="separatorInset" minX="117" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <view key="tableFooterView" contentMode="scaleToFill" id="YEi-CO-9RJ">
+                                    <rect key="frame" x="0.0" y="67" width="600" height="274"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="详细介绍" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9w7-xo-He6">
+                                            <rect key="frame" x="15" y="15" width="68" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="LOO-1q-00L"/>
+                                                <constraint firstAttribute="width" constant="68" id="ZH0-u7-yVT"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" red="0.63137254899999995" green="0.61568627450000002" blue="0.58039215690000001" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zOT-Nw-HIl" customClass="UIPlaceHolderTextView">
+                                            <rect key="frame" x="117" y="10" width="468" height="249"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                            <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                            <color key="textColor" red="0.63137254899999995" green="0.61568627450000002" blue="0.58039215690000001" alpha="1" colorSpace="calibratedRGB"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="done"/>
+                                            <connections>
+                                                <outlet property="delegate" destination="RYg-UJ-oQ6" id="blp-aT-ZI0"/>
+                                            </connections>
+                                        </textView>
+                                    </subviews>
+                                    <color key="backgroundColor" red="1" green="0.98823529409999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
+                                    <constraints>
+                                        <constraint firstItem="9w7-xo-He6" firstAttribute="leading" secondItem="YEi-CO-9RJ" secondAttribute="leading" constant="15" id="Ine-FV-hRE"/>
+                                        <constraint firstItem="zOT-Nw-HIl" firstAttribute="leading" secondItem="9w7-xo-He6" secondAttribute="trailing" constant="34" id="W4L-Qz-JtC"/>
+                                        <constraint firstItem="zOT-Nw-HIl" firstAttribute="top" secondItem="YEi-CO-9RJ" secondAttribute="top" constant="10" id="ffp-t2-zod"/>
+                                        <constraint firstAttribute="bottom" secondItem="zOT-Nw-HIl" secondAttribute="bottom" constant="15" id="qmn-n4-cim"/>
+                                        <constraint firstItem="9w7-xo-He6" firstAttribute="top" secondItem="YEi-CO-9RJ" secondAttribute="top" constant="15" id="wBt-2t-0hO"/>
+                                        <constraint firstAttribute="trailing" secondItem="zOT-Nw-HIl" secondAttribute="trailing" constant="15" id="zFv-rh-JZt"/>
+                                    </constraints>
+                                </view>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="HPh-NC-D5S" customClass="ZXTextFieldCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="HPh-NC-D5S" id="BOe-IC-EAk">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="学校名称" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gek-HN-y0P">
+                                                    <rect key="frame" x="15" y="11" width="68" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="b6K-Ae-88s"/>
+                                                        <constraint firstAttribute="width" constant="68" id="dkL-9U-I5k"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.63137254901960782" green="0.61568627450980395" blue="0.58039215686274503" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9Wv-FY-7PK">
+                                                    <rect key="frame" x="117" y="7" width="468" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="2rE-jo-1MT"/>
+                                                    </constraints>
+                                                    <color key="textColor" red="0.63137254899999995" green="0.61568627450000002" blue="0.58039215690000001" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <textInputTraits key="textInputTraits" returnKeyType="done"/>
+                                                    <connections>
+                                                        <outlet property="delegate" destination="RYg-UJ-oQ6" id="Pfu-Me-ptU"/>
+                                                    </connections>
+                                                </textField>
+                                            </subviews>
+                                            <color key="backgroundColor" red="1" green="0.98823529409999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
+                                            <constraints>
+                                                <constraint firstItem="gek-HN-y0P" firstAttribute="top" secondItem="BOe-IC-EAk" secondAttribute="top" constant="11" id="Gpl-Gb-KjX"/>
+                                                <constraint firstItem="gek-HN-y0P" firstAttribute="leading" secondItem="BOe-IC-EAk" secondAttribute="leading" constant="15" id="H50-YA-i5r"/>
+                                                <constraint firstItem="9Wv-FY-7PK" firstAttribute="leading" secondItem="gek-HN-y0P" secondAttribute="trailing" constant="34" id="I6d-5m-bNu"/>
+                                                <constraint firstAttribute="trailing" secondItem="9Wv-FY-7PK" secondAttribute="trailing" constant="15" id="e17-0I-XoU"/>
+                                                <constraint firstItem="9Wv-FY-7PK" firstAttribute="top" secondItem="BOe-IC-EAk" secondAttribute="top" constant="7" id="r5d-nm-lfD"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="nameLabel" destination="gek-HN-y0P" id="zc1-S5-aQV"/>
+                                            <outlet property="textField" destination="9Wv-FY-7PK" id="Tp2-Sj-a4t"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="RYg-UJ-oQ6" id="qyK-96-mF6"/>
+                                    <outlet property="delegate" destination="RYg-UJ-oQ6" id="7i6-Bl-vn9"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="vMu-Dd-VUI" firstAttribute="leading" secondItem="xJF-gs-NCi" secondAttribute="leading" id="CLy-Xn-Yab"/>
+                            <constraint firstItem="q7T-L8-oJZ" firstAttribute="top" secondItem="vMu-Dd-VUI" secondAttribute="bottom" id="LVj-QS-EK2"/>
+                            <constraint firstItem="vMu-Dd-VUI" firstAttribute="top" secondItem="xJF-gs-NCi" secondAttribute="top" id="TZw-Pj-h9g"/>
+                            <constraint firstAttribute="trailing" secondItem="vMu-Dd-VUI" secondAttribute="trailing" id="qDj-If-wdB"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="vMu-Dd-VUI" id="fVg-Tk-JhN"/>
+                        <outlet property="textView" destination="zOT-Nw-HIl" id="vfV-4q-0Kq"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wzq-xi-sYZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3131" y="365"/>
         </scene>
         <!--Add Teacher Graceful View Controller-->
         <scene sceneID="2gH-5B-eYz">
