发布学校动态

--- a/Aier360/Controllers/校园/校园动态/SchoolInfo.storyboard
+++ b/Aier360/Controllers/校园/校园动态/SchoolInfo.storyboard
@@ -320,10 +320,10 @@
             </objects>
             <point key="canvasLocation" x="2479" y="1030"/>
         </scene>
-        <!--Release Dynamic View Controller-->
+        <!--Release School Dynamic View Controller-->
         <scene sceneID="Kiq-Lk-v6t">
             <objects>
-                <viewController storyboardIdentifier="ZXReleaseDynamicViewController" id="1Nr-i3-iuF" customClass="ZXReleaseDynamicViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ZXReleaseSchoolDynamicViewController" id="1Nr-i3-iuF" customClass="ZXReleaseSchoolDynamicViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="L8c-R5-V1x"/>
                         <viewControllerLayoutGuide type="bottom" id="Lvo-yn-osM"/>
