--- a/Aier360/Controllers/发现/Discovery.storyboard
+++ b/Aier360/Controllers/发现/Discovery.storyboard
@@ -115,8 +115,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Cw1-V6-FSs">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Cw1-V6-FSs">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="506"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ZXParentDynamicCell" rowHeight="420" id="SYr-In-ckO" customClass="ZXParentDynamicCell">
@@ -372,7 +372,6 @@
                         <constraints>
                             <constraint firstItem="Cw1-V6-FSs" firstAttribute="top" secondItem="6DR-4M-RLf" secondAttribute="top" id="2ca-jL-3nc"/>
                             <constraint firstItem="Cw1-V6-FSs" firstAttribute="leading" secondItem="6DR-4M-RLf" secondAttribute="leading" id="7UU-vQ-qr7"/>
-                            <constraint firstItem="xT4-du-0V2" firstAttribute="top" secondItem="Cw1-V6-FSs" secondAttribute="bottom" id="Tjj-LY-9Yl"/>
                             <constraint firstAttribute="trailing" secondItem="Cw1-V6-FSs" secondAttribute="trailing" id="y2h-Dv-B6T"/>
                         </constraints>
                     </view>
@@ -383,6 +382,129 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nfY-uT-5wW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="608" y="1054"/>
+        </scene>
+        <!--Parent Message View Controller-->
+        <scene sceneID="saK-Qu-vZZ">
+            <objects>
+                <viewController storyboardIdentifier="ZXParentMessageViewController" id="Ug0-q8-uaH" customClass="ZXParentMessageViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="jZy-1W-Ek2"/>
+                        <viewControllerLayoutGuide type="bottom" id="yrP-x5-UT7"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="bXp-Kg-OpY">
+                        <rect key="frame" x="0.0" y="64" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="130" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="UEa-VP-piH">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="130" id="x67-1M-4eX" customClass="ZXMessageCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="x67-1M-4eX" id="5mP-nw-NVX">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nZE-ST-BKG">
+                                                    <rect key="frame" x="15" y="12" width="35" height="35"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="35" id="EQ7-fl-BVO"/>
+                                                        <constraint firstAttribute="width" constant="35" id="aHf-hk-ssY"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sXk-FI-DZh">
+                                                    <rect key="frame" x="60" y="12" width="36" height="17"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="17" id="QJs-9Z-3zu"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" red="0.37254901959999998" green="0.37254901959999998" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="characterWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tdA-YI-0fS" customClass="MLEmojiLabel">
+                                                    <rect key="frame" x="60" y="39" width="420" height="47"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" red="0.37254901959999998" green="0.37254901959999998" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bbS-qM-3cg">
+                                                    <rect key="frame" x="520" y="12" width="65" height="65"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="65" id="S2e-G4-JK5"/>
+                                                        <constraint firstAttribute="width" constant="65" id="j6z-wF-0Ra"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AVj-yn-KtP">
+                                                    <rect key="frame" x="520" y="12" width="65" height="65"/>
+                                                    <color key="backgroundColor" red="0.94901960780000005" green="0.94117647059999998" blue="0.91372549020000005" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="65" id="Ax2-S9-EHp"/>
+                                                        <constraint firstAttribute="width" constant="65" id="McW-4z-ebg"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <color key="textColor" red="0.63137254899999995" green="0.61568627450000002" blue="0.58039215690000001" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zvF-KU-lYz">
+                                                    <rect key="frame" x="60" y="100" width="31" height="17"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="17" id="UPi-Qh-7iC"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <color key="textColor" red="0.63137254899999995" green="0.61568627450000002" blue="0.58039215690000001" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" red="1" green="0.98823529409999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
+                                            <constraints>
+                                                <constraint firstItem="zvF-KU-lYz" firstAttribute="leading" secondItem="5mP-nw-NVX" secondAttribute="leading" constant="60" id="15M-LD-bxW"/>
+                                                <constraint firstItem="bbS-qM-3cg" firstAttribute="top" secondItem="5mP-nw-NVX" secondAttribute="top" constant="12" id="675-oX-wFb"/>
+                                                <constraint firstItem="tdA-YI-0fS" firstAttribute="leading" secondItem="nZE-ST-BKG" secondAttribute="trailing" constant="10" id="93L-eL-MGL"/>
+                                                <constraint firstItem="AVj-yn-KtP" firstAttribute="top" secondItem="5mP-nw-NVX" secondAttribute="top" constant="12" id="DZV-BN-C0a"/>
+                                                <constraint firstAttribute="bottom" secondItem="zvF-KU-lYz" secondAttribute="bottom" constant="12" id="Ebg-Lp-YwW"/>
+                                                <constraint firstItem="nZE-ST-BKG" firstAttribute="leading" secondItem="5mP-nw-NVX" secondAttribute="leading" constant="15" id="IZb-FJ-sPJ"/>
+                                                <constraint firstItem="zvF-KU-lYz" firstAttribute="top" secondItem="tdA-YI-0fS" secondAttribute="bottom" constant="14" id="Q87-go-gQz"/>
+                                                <constraint firstItem="sXk-FI-DZh" firstAttribute="top" secondItem="5mP-nw-NVX" secondAttribute="top" constant="12" id="SeP-kP-ajm"/>
+                                                <constraint firstItem="tdA-YI-0fS" firstAttribute="top" secondItem="sXk-FI-DZh" secondAttribute="bottom" constant="10" id="U20-WE-fJW"/>
+                                                <constraint firstItem="nZE-ST-BKG" firstAttribute="top" secondItem="5mP-nw-NVX" secondAttribute="top" constant="12" id="VmY-8k-SeO"/>
+                                                <constraint firstItem="sXk-FI-DZh" firstAttribute="leading" secondItem="nZE-ST-BKG" secondAttribute="trailing" constant="10" id="b4M-hv-04P"/>
+                                                <constraint firstItem="AVj-yn-KtP" firstAttribute="leading" secondItem="tdA-YI-0fS" secondAttribute="trailing" constant="40" id="d7t-48-h8u"/>
+                                                <constraint firstAttribute="trailing" secondItem="AVj-yn-KtP" secondAttribute="trailing" constant="15" id="m9q-Md-aLe"/>
+                                                <constraint firstAttribute="trailing" secondItem="bbS-qM-3cg" secondAttribute="trailing" constant="15" id="v2k-9v-gue"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" red="1" green="0.98823529409999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
+                                        <connections>
+                                            <outlet property="contentLabel" destination="tdA-YI-0fS" id="HlS-Ik-rc2"/>
+                                            <outlet property="dynamicContentLabel" destination="AVj-yn-KtP" id="F3L-eE-Cfr"/>
+                                            <outlet property="dynamicImageView" destination="bbS-qM-3cg" id="Mvl-Au-4l7"/>
+                                            <outlet property="headImageView" destination="nZE-ST-BKG" id="lF4-G7-CjB"/>
+                                            <outlet property="nameLabel" destination="sXk-FI-DZh" id="F0E-qQ-b0Z"/>
+                                            <outlet property="timeLabel" destination="zvF-KU-lYz" id="Tgc-EF-gu3"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="Ug0-q8-uaH" id="8dt-5N-mIT"/>
+                                    <outlet property="delegate" destination="Ug0-q8-uaH" id="fzF-3C-pRn"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="UEa-VP-piH" firstAttribute="leading" secondItem="bXp-Kg-OpY" secondAttribute="leading" id="7zi-cp-Kwz"/>
+                            <constraint firstItem="UEa-VP-piH" firstAttribute="top" secondItem="bXp-Kg-OpY" secondAttribute="top" id="Kel-Fn-geO"/>
+                            <constraint firstAttribute="trailing" secondItem="UEa-VP-piH" secondAttribute="trailing" id="Qaj-oX-gjb"/>
+                            <constraint firstItem="yrP-x5-UT7" firstAttribute="top" secondItem="UEa-VP-piH" secondAttribute="bottom" id="coD-y4-Iqg"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="UEa-VP-piH" id="CSa-wl-FwO"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="46u-hw-XWt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1481" y="406"/>
         </scene>
     </scenes>
     <resources>
