改成好友圈

--- a/Aier360/Controllers/发现/Discovery.storyboard
+++ b/Aier360/Controllers/发现/Discovery.storyboard
@@ -390,11 +390,11 @@
                                     <button opaque="NO" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gbh-PW-IcI">
                                         <rect key="frame" x="0.0" y="0.0" width="300" height="49"/>
                                         <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                        <state key="normal" title="家长圈">
+                                        <state key="normal" title="好友圈">
                                             <color key="titleColor" red="0.37254901960784315" green="0.37254901960784315" blue="0.37254901960784315" alpha="1" colorSpace="calibratedRGB"/>
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
-                                        <state key="selected" title="家长圈" backgroundImage="dynamic_bt_tabbg">
+                                        <state key="selected" title="好友圈" backgroundImage="dynamic_bt_tabbg">
                                             <color key="titleColor" red="0.082352941176470587" green="0.80000000000000004" blue="0.61176470588235299" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
                                         <connections>
